-bug#0002504: Data template search not functional 
-bug#0002542: [FG-VD-15-017] Cacti Cross-Site Scripting Vulnerability Notification 
-bug#0002543: Unable to switch pages within graphs_new.php due to invalid URL generation 
-bug#0002544: Duplicate entry in $nav_url during list view 
-bug#0002571: SQL Injection and Location header injection from cdef id CVE-2015-4342

0.8.8c
-bug#0002228: GPL incompatible files included in Cacti project in include/treeview
-bug#0002383: Sanitize the step and id variables CVE-2013-5588, CVE-2013-5589
-bug#0002385: Cannot export host templates while including dependencies
-bug#0002386: cli/upgrade_database.php is missing the last two releases
-bug#0002390: Poller/script issue with slash and backslash
-bug#0002405: SQL injection in graph_xport.php
-bug#0002431: CVE-2014-2326 Unspecified HTML Injection Vulnerability
-bug#0002432: CVE-2014-2327 Cross Site Request Forgery Vulnerability - Special Thanks to Deutsche Telekom CERT
-bug#0002433: CVE-2014-2328 Unspecified Remote Command Execution Vulnerability
-bug#0002434: Suppress SNMP UNITS Suffix from cacti_snmp_get() output
-bug#0002438: Down Host Detection issue when using SNMP Desc or SNMP getNext
-bug#0002446: Subtract plugin processing time from Poller sleep time
-bug#0002453: CVE-2014-4002 Cross-Site Scripting Vulnerability - Special Thanks to G. Geshev (munmap)
-bug#0002455: Incomplete and incorrect input parsing leads to remote code execution and SQL injection attack scenarios
-bug#0002456: CVE-2014-5025 / CVE-2014-5026 - Cross-Site Scripting Vulnerability - Special Thanks to Adan Alvarez and Paul Gevers
-bug#0002495: Graph Filter Date Range 
-bug: Fix COMMENT handling, even in case COMMENT is empty, with or without HR and with variable substitution
-bug: Fix issues when SNMP data holds a "="; "explode" must be treated accordingly
-bug: Fix filter highlighting on data sources for the data template field
-bug: correct description of SNMP V3 parameters